--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -32,3 +32,17 @@ jobs:
           context: .
           push: true
           tags: frame0310/08.docker-compose:${{ github.run_number }}    
+
+      - name: login on ghcr
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.CR_TOKEN }}
+
+      - name: build-push image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/frame0310/08.docker-compose:${{ github.run_number }}
