--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -54,6 +54,8 @@ jobs:
           SLACK_TITLE: 'PUSH IMAGE'
           SLACK_COLOR: ${{ job.status }}
           LACK_ICON: https://github.com/rtCamp.png?size=48
-          SLACK_MESSAGE: 'Images have been pushed to registrym. IMAGE: ${{ github.repository }} version ${{ github.run_number }}'
+          SLACK_MESSAGE: |
+            'Images have been pushed to registry.'
+            'IMAGE: ${{ github.repository }} version ${{ github.run_number }}'
           SLACK_USERNAME: ntBot
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
